# clang-ast

./: CMakeLists.standalone  CMakeLists.txt  README.txt  ast.cpp  ast.txt
cmake/modules/: FindLibClang.cmake
test/: AttributedStmt.cpp  BreakStmt.cpp  CMakeLists.txt  CXXBoolLiteralExpr.cpp  CXXConstructorDecl.cpp  CXXConversionDecl.cpp  CXXDestructorDecl.cpp  CXXMethodDecl.cpp  CompoundStmt.cpp  ContinueStmt.cpp  DeclStmt.cpp  DoStmt.cpp  EnableImplicit.cpp  EnableLoc.cpp  FilterString.cpp  ForStmt.cpp  GotoStmt.cpp  IfStmt.cpp  IndirectGotoStmt.cpp  IntegerLiteral.cpp  LabelDecl.cpp  LabelStmt.cpp  NullStmt.cpp  PredefinedExpr.cpp  ReturnStmt.cpp  StringLiteral.cpp  SwitchStmt.cpp  TranslationUnitDecl.cpp  UnaryExprOrTypeTraitExpr.cpp  VarDecl.cpp  WhileStmt.cpp  ast.cpp  lit.cfg
test/Decl/: AccessSpecDecl.cpp  CXXConstructorDecl.cpp  CXXConversionDecl.cpp  CXXDestructorDecl.cpp  CXXMethodDecl.cpp  CXXRecordDecl.cpp  ClassTemplateDecl.cpp  ClassTemplatePartialSpecializationDecl.cpp  ClassTemplateSpecializationDecl.cpp  DeclarationName.cpp  EnumConstantDecl.cpp  EnumDecl.c  EnumDecl.cpp  FieldDecl.cpp  FileScopeAsmDecl.cpp  FriendDecl.cpp  FunctionDecl.cpp  FunctionTemplateDecl.cpp  IndirectFieldDecl.cpp  LabelDecl.cpp  LinkageSpecDecl.cpp  NamespaceAliasDecl.cpp  NamespaceDecl.cpp  NonTypeTemplateParmDecl.cpp  ParmVarDecl.cpp  RecordDecl.c  StaticAssertDecl.cpp  TemplateTemplateParmDecl.cpp  TemplateTypeParmDecl.cpp  TranslationUnitDecl.cpp  TypeAliasDecl.cpp  TypeAliasTemplateDecl.cpp  TypedefDecl.cpp  UnresolvedUsingTypenameDecl.cpp  UnresolvedUsingValueDecl.cpp  (+4 more)
(+46 files in other folders)
